--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { 
+    height: 100%; 
+    background-color: aliceblue;
+}
+body { margin: 0;font: 400 14px/20px sans-serif; }
