--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -12,6 +12,7 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
+
   <button mat-icon-button [matMenuTriggerFor]="dropMenu" fxHide fxShow.xs>
     <mat-icon>more_vert</mat-icon>
   </button>
@@ -27,5 +28,11 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
+    <!-- <mat-icon aria-hidden="false" aria-label="Example home icon"
+      >logout
+    </mat-icon> -->
   </mat-menu>
+  <mat-icon *ngIf="sharedService?.validateRoute" (click)="logout()" aria-hidden="false" aria-label="Example home icon"
+    >logout
+  </mat-icon>
 </mat-toolbar>
