--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,6 @@
 
 html, body { 
     height: 100%; 
-    background-color: aliceblue;
+    background-color:#f3f5f9;
 }
 body { margin: 0;font: 400 14px/20px sans-serif; }
